Simplify Ceph flavor
Now that the `ceph` flavor is gone, let's use `ceph` for the recommended
approach and `ceph_alternative` for the other one.

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,9 +40,9 @@ redis =
     redis>=2.10.0 # MIT
 swift =
     python-swiftclient>=3.1.0
-ceph_recommended_lib =
+ceph =
     cradox>=1.2.0
-ceph_alternative_lib =
+ceph_alternative =
     python-rados>=12.2.0 # not available on pypi
 prometheus =
     python-snappy
