--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,8 @@ setenv =
     postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
     mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
 
-    GNOCCHI_STORAGE_DEPS=file,swift,test-swift,s3,ceph,ceph_recommended_lib,redis
-    ceph: GNOCCHI_STORAGE_DEPS=ceph,ceph_recommended_lib
+    GNOCCHI_STORAGE_DEPS=file,swift,test-swift,s3,ceph,redis
+    ceph: GNOCCHI_STORAGE_DEPS=ceph
     swift: GNOCCHI_STORAGE_DEPS=swift,test-swift
     file: GNOCCHI_STORAGE_DEPS=file
     redis: GNOCCHI_STORAGE_DEPS=redis
