--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,9 @@ envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
-setenv = GNOCCHI_VARIANT=test,postgresql,file
+setenv =
+   GNOCCHI_VARIANT=test,postgresql,file
+   GNOCCHI_TEST_DEBUG=1
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
@@ -52,7 +54,9 @@ envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
-setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+setenv =
+   GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+   GNOCCHI_TEST_DEBUG=1
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
   gnocchiclient>=2.8.0
   pifpaf[ceph,gnocchi]>=0.13
@@ -65,7 +69,9 @@ envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
-setenv = GNOCCHI_VARIANT=test,postgresql,file
+setenv =
+   GNOCCHI_VARIANT=test,postgresql,file
+   GNOCCHI_TEST_DEBUG=1
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=2.2,<2.3
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
@@ -78,7 +84,9 @@ envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
-setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+setenv =
+   GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+   GNOCCHI_TEST_DEBUG=1
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=2.2,<2.3
   gnocchiclient>=2.8.0
   pifpaf[ceph,gnocchi]>=0.13
