DNM: rest: port /v1/metric API to Falcon
This is a PoC that I made in a few hours to port the metric API to Falcon. I
wanted to have a glimpse on how easy it would be – and it was very easy.

For now, I like how easier the routing is and how cleaner and easier to grasp
it is compared to Pecan. However, I don't see any killer feature yet.

This patch passes all the Gabbi test, and some of the test_rest tests. I don't
see a point yet in making test_rest pass, as it is good enough for what I was
trying to do.

--- a/gnocchi/rest/api-paste.ini
+++ b/gnocchi/rest/api-paste.ini
@@ -2,18 +2,21 @@
 use = egg:Paste#urlmap
 / = gnocchiversions_pipeline
 /v1 = gnocchiv1+noauth
+/v1/metric = gnocchiv1metric+noauth
 /healthcheck = healthcheck
 
 [composite:gnocchi+keystone]
 use = egg:Paste#urlmap
 / = gnocchiversions_pipeline
 /v1 = gnocchiv1+keystone
+/v1/metric = gnocchiv1metric+keystone
 /healthcheck = healthcheck
 
 [composite:gnocchi+remoteuser]
 use = egg:Paste#urlmap
 / = gnocchiversions_pipeline
 /v1 = gnocchiv1+noauth
+/v1/metric = gnocchiv1metric+noauth
 /healthcheck = healthcheck
 
 [pipeline:gnocchiv1+noauth]
@@ -21,6 +24,12 @@ pipeline = http_proxy_to_wsgi gnocchiv1
 
 [pipeline:gnocchiv1+keystone]
 pipeline = http_proxy_to_wsgi keystone_authtoken gnocchiv1
+
+[pipeline:gnocchiv1metric+noauth]
+pipeline = http_proxy_to_wsgi gnocchiv1metric
+
+[pipeline:gnocchiv1metric+keystone]
+pipeline = http_proxy_to_wsgi keystone_authtoken gnocchiv1metric
 
 [pipeline:gnocchiversions_pipeline]
 pipeline = http_proxy_to_wsgi gnocchiversions
@@ -32,6 +41,10 @@ root = gnocchi.rest.api.VersionsController
 [app:gnocchiv1]
 paste.app_factory = gnocchi.rest.app:app_factory
 root = gnocchi.rest.api.V1Controller
+
+[app:gnocchiv1metric]
+paste.app_factory = gnocchi.rest.app:app_falcon_factory
+root = gnocchi.rest.metric.make_app
 
 [filter:keystone_authtoken]
 use = egg:keystonemiddleware#auth_token
