Add support for APISpec
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ doc =
     sphinx<1.6.0
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
+    sphinxcontrib-redoc
     PyYAML
     Jinja2
     reno>=1.6.2
