storage: merge GranularityDoesNotExist and AggregationDoesNotExist
We often don't have enough information to distinguish the two and it does not
matter in the end. Simplify the code base a bit by merging the two without
losing information.

--- a/gnocchi/tests/functional/gabbits/aggregation.yaml
+++ b/gnocchi/tests/functional/gabbits/aggregation.yaml
@@ -176,7 +176,7 @@ tests:
       GET: /v1/aggregation/metric?metric=$HISTORY['get metric list'].$RESPONSE['$[0].id']&granularity=42
       status: 404
       response_strings:
-        - Granularity '42.0' for metric
+        - Aggregation method 'mean' at granularity '42.0' for metric
 
 # Aggregation by resource and metric_name
 
