--- a/gnocchi/tests/functional/gabbits/metric-granularity.yaml
+++ b/gnocchi/tests/functional/gabbits/metric-granularity.yaml
@@ -43,7 +43,7 @@ tests:
       GET: /v1/metric/$RESPONSE['$[0].id']/measures?granularity=42
       status: 404
       response_strings:
-        - Granularity '42.0' for metric $RESPONSE['$[0].id'] does not exist
+        - Aggregation method 'mean' at granularity '42.0' for metric $RESPONSE['$[0].id'] does not exist
 
     - name: get measurements granularity
       GET: /v1/metric/$HISTORY['get metric list'].$RESPONSE['$[0].id']/measures?granularity=1
