--- a/tox.ini
+++ b/tox.ini
@@ -143,7 +143,9 @@ basepython = python2.7
 whitelist_externals = bash rm
 setenv = GNOCCHI_STORAGE_DEPS=file
          GNOCCHI_TEST_DEBUG=1
-deps = {[testenv:docs]deps}
+deps = -U
+       setuptools>=22.0
+       {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for <= 4.2 doc
        scipy
