--- a/setup.cfg
+++ b/setup.cfg
@@ -145,6 +145,7 @@ console_scripts =
     gnocchi-change-sack-size = gnocchi.cli.manage:change_sack_size
     gnocchi-statsd = gnocchi.cli.statsd:statsd
     gnocchi-metricd = gnocchi.cli.metricd:metricd
+    gnocchi-injector = gnocchi.cli.injector:injector
 
 oslo.config.opts =
     gnocchi = gnocchi.opts:list_opts
