--- a/tox.ini
+++ b/tox.ini
@@ -150,6 +150,7 @@ deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for < 4.3 doc
        pbr
+       WebOb<1.8
 # for <= 4.2 doc
        scipy
 # for <= 4.1 doc
