--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,6 @@ voluptuous
 werkzeug
 trollius; python_version < '3.4'
 tenacity>=3.1.0  # Apache-2.0
-WebOb>=1.4.1
+WebOb>=1.4.1,<1.8.0
 Paste
 PasteDeploy
