--- a/gnocchi/tests/functional/gabbits/async.yaml
+++ b/gnocchi/tests/functional/gabbits/async.yaml
@@ -48,14 +48,8 @@ tests:
             value: 12
       status: 202
 
-# This requires a poll as the measures are not immediately
-# aggregated.
-
     - name: get some measures
-      GET: /v1/resource/generic/41937416-1644-497d-a0ed-b43d55a2b0ea/metric/some.counter/measures
-      poll:
-          count: 50
-          delay: .1
+      GET: /v1/resource/generic/41937416-1644-497d-a0ed-b43d55a2b0ea/metric/some.counter/measures?refresh=true
       response_strings:
           - "2015"
       response_json_paths:
