--- a/gnocchi/tests/functional/gabbits/resource-aggregation.yaml
+++ b/gnocchi/tests/functional/gabbits/resource-aggregation.yaml
@@ -43,7 +43,7 @@ tests:
 
     - name: get aggregation with no data
       desc: https://github.com/gnocchixyz/gnocchi/issues/69
-      POST: /v1/aggregation/resource/generic/metric/cpu.util?stop=2012-03-06T00:00:00&fill=0&granularity=300&resample=3600
+      POST: /v1/aggregation/resource/generic/metric/cpu.util?stop=2012-03-06T00:00:00&fill=0&granularity=300&resample=3600&refresh=true
       request_headers:
         x-user-id: 6c865dd0-7945-4e08-8b27-d0d7f1c2b667
         x-project-id: c7f32f1f-c5ef-427a-8ecd-915b219c66e8
@@ -51,9 +51,6 @@ tests:
       data:
         =:
           id: 4ed9c196-4c9f-4ba8-a5be-c9a71a82aac4
-      poll:
-        count: 10
-        delay: 1
       response_json_paths:
         $: []
 
@@ -98,10 +95,7 @@ tests:
       status: 202
 
     - name: aggregate metric with groupby on project_id with filter
-      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id&filter=user_id%3D%276c865dd0-7945-4e08-8b27-d0d7f1c2b667%27
-      poll:
-        count: 10
-        delay: 1
+      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id&filter=user_id%3D%276c865dd0-7945-4e08-8b27-d0d7f1c2b667%27&refresh=true
       response_json_paths:
         $:
           - measures:
@@ -118,13 +112,10 @@ tests:
               project_id: ee4cfc41-1cdc-4d2f-9a08-f94111d80171
 
     - name: aggregate metric with groupby on project_id
-      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id
+      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id&refresh=true
       data:
         =:
           user_id: 6c865dd0-7945-4e08-8b27-d0d7f1c2b667
-      poll:
-        count: 10
-        delay: 1
       response_json_paths:
         $:
           - measures:
@@ -150,13 +141,10 @@ tests:
         - Invalid groupby attribute
 
     - name: aggregate metric with groupby on project_id and user_id
-      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id&groupby=user_id
+      POST: /v1/aggregation/resource/generic/metric/cpu.util?groupby=project_id&groupby=user_id&refresh=true
       data:
         =:
           user_id: 6c865dd0-7945-4e08-8b27-d0d7f1c2b667
-      poll:
-        count: 10
-        delay: 1
       response_json_paths:
         $:
           - measures:
