--- a/gnocchi/tests/functional/gabbits/transformedids.yaml
+++ b/gnocchi/tests/functional/gabbits/transformedids.yaml
@@ -141,10 +141,7 @@ tests:
       status: 202
 
     - name: list two measures by external resource id
-      GET: $LAST_URL
-      poll:
-          count: 10
-          delay: 1
+      GET: $LAST_URL?refresh=true
       response_json_paths:
           $[0][2]: 43.1
           $[1][2]: 12
