Remove cradox dependency
We can now just depend on ceph 12.2, and not rely on cradox anymore.

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,9 +76,7 @@ redis =
 swift =
     python-swiftclient>=3.1.0
 ceph =
-    cradox>=2.0.0
-ceph_alternative =
-    python-rados>=12.2.0 # not available on pypi
+    # python-rados>=12.2.0 # not available on pypi
 prometheus =
     python-snappy
     protobuf
