--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ skipsdist = True
 
 [testenv]
 skip_install = True
-sitepackages = False
+sitepackages = True
+install_command = pip install -U --upgrade-strategy eager {packages}
 passenv = LANG GNOCCHI_TEST_* AWS_*
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
@@ -149,6 +150,7 @@ setenv = GNOCCHI_STORAGE_DEPS=file
 deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for < 4.3 doc
+       cradox
        pbr
        WebOb<1.8
 # for <= 4.2 doc
