--- a/.mergify.yml
+++ b/.mergify.yml
@@ -7,6 +7,8 @@ rules:
           - continuous-integration/travis-ci
       required_pull_request_reviews:
         required_approving_review_count: 2
+    merge_strategy:
+      method: rebase
   branches:
     stable/.*:
       protection:
