--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,6 +9,12 @@ rules:
         required_approving_review_count: 2
     merge_strategy:
       method: rebase
+    automated_backport_labels:
+      backport-to-4.2: stable/4.2
+      backport-to-4.1: stable/4.1
+      backport-to-4.0: stable/4.0
+      backport-to-3.1: stable/3.1
+      backport-to-3.0: stable/3.0
   branches:
     stable/.*:
       protection:
